kubernetes/kustomize/docsportal/overlays/helpcenter_swiss_internal/components/oauth-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docsportal-swiss-internal-oauth-proxy
  namespace: helpcenter-swiss-int
  labels:
    app.kubernetes.io/component: docsportal-swiss-internal-oauth-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: docsportal-swiss-internal-oauth-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/component: docsportal-swiss-internal-oauth-proxy
    spec:
      terminationGracePeriodSeconds: 10
      serviceAccount: "docsportal-helpcenter-swiss-internal"

      containers:
        - name: oauth-proxy
          image: oauth2-proxy
          imagePullPolicy: IfNotPresent
          ports:
          - name: oauth2-proxy
            containerPort: 4180
            protocol: TCP
          args:
            - '--config=/secrets/oauth2-proxy.cfg'
          readinessProbe:
            tcpSocket:
              port: 4180
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 4180
            periodSeconds: 5
          resources:
            requests:
              cpu: "50m"
              memory: "50Mi"
            limits:
              cpu: "100m"
              memory: "200Mi"
          volumeMounts:
            - mountPath: "/secrets"
              name: "secrets"

      volumes:
        - name: vault-agent-config
          configMap:
            defaultMode: 420
            name: oauth-vault-agent-config

        - name: secrets
          emptyDir: {}

        - name: "k8-tokens"
          projected:
            defaultMode: 420
            sources:
            - serviceAccountToken:
                expirationSeconds: 7200
                path: vault-token
