kubernetes/kustomize/docsportal/overlays/helpcenter_swiss_internal/components/oauth-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docsportal-oauth-proxy
  namespace: hc-internal
  labels:
    app.kubernetes.io/component: docsportal-oauth-proxy
spec:
  type: ClusterIP
  ports:
    - port: 4180
      targetPort: oauth2-proxy
      protocol: TCP
      name: oauth2-proxy
  selector:
    app.kubernetes.io/component: docsportal-oauth-proxy
